FIX : 페이지 컨테이너 position relative, z-index 100 처리

--- a/components/newHome/Members/Members.module.scss
+++ b/components/newHome/Members/Members.module.scss
@@ -7,6 +7,8 @@
   height: 100vh;
   opacity: 1;
   transition: 0.5s ease;
+  position: relative;
+  z-index: 100;
 
   * {
     @include font.pretendard;
